FIN-456 Fixed menu collapsing, hide menu from login screen

--- a/app/styles/main-tablet.scss
+++ b/app/styles/main-tablet.scss
@@ -118,7 +118,7 @@ and (max-width: 1023px) {
   .container>.navbar-header{
     margin-right: auto;
     margin-left: auto;
-    width: 98%
+    width: 100%
   }
   .navbar>.container .navbar-brand{
     margin-left:0!important;
